[package]
name = "engage"
version = "0.1.0"
authors = ["Yoel Jacobsen <yoel.jacobsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_batch = "0.46.0"
tokio = "1.5.0"
